fix scroll bar issue; fix vague errors on auth pages; enhanced formatting on success toasts for income; updated spacing and alignment on modal buttons

--- a/client/src/components/modal.css
+++ b/client/src/components/modal.css
@@ -48,7 +48,7 @@
 
 .modal-body button[type="submit"], .modal-body .multiple-form-btns button {
     display: block;
-    margin: var(--spacing-md) 0;
+    margin: var(--spacing-md) auto;
 }
 
 .multiple-form-btns{
