--- a/client/src/features/budget/components/CategoryBudgetOverview.css
+++ b/client/src/features/budget/components/CategoryBudgetOverview.css
@@ -25,7 +25,7 @@
 }
 
 .monthly-budget{
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 .category-budget-overview p:nth-child(1){
