--- a/client/src/index.css
+++ b/client/src/index.css
@@ -488,7 +488,7 @@ body {
 }
 
 .custom-scroll-bar{
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .custom-scroll-bar::-webkit-scrollbar{
@@ -504,7 +504,7 @@ body {
   border-radius: var(--border-radius-full);
 }
 
-.scrollable::-webkit-scrollbar-thumb:hover {
+.custom-scroll-bar::-webkit-scrollbar-thumb:hover {
   background-color: var(--color-secondary-hover);
   border-radius: var(--border-radius-full);
 }
