--- a/client/src/pages/Dashboard.css
+++ b/client/src/pages/Dashboard.css
@@ -49,14 +49,14 @@
 
 .budget-section{
     height: 460px;
-    overflow-y: scroll;
+    overflow: hidden;
     display: flex;
     flex-direction: column;
 }
 
 .monthly-budget{
     flex: 1;
-    overflow-y: scroll;
+    overflow-y: auto;
     min-height: 0; /* critical */
 }
 
@@ -91,7 +91,7 @@
     flex: 1;
     display: flex;
     flex-direction: column;
-    overflow-y: scroll;
+    overflow-y: auto;
     min-height: 0;
 }
 
